tests/integration/errors/too-many-args/main.cx
fun flarg() {
}
let _ = flarg(1, 2)
